# tinyoptimizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  finite_difference.h  functional.h  library.properties  lu_decompose.h  matrix.h  solve.h  tinyoptimizer.h
examples/qp_solver/: qp_solver.ino
test/: Arduino.h  CMakeLists.txt  test_finite_difference.cpp  test_lu_decompose.cpp  test_matrix.cpp  test_solve.cpp
